# efficient-model-adaptation

./: .gitignore  AGENTS.md  README.md  SKILL.md  requirements.txt
app/voice-ai/: pyproject.toml  readme.md  run_voice_agent.py
app/voice-ai/src/: agent.py  args.py  project.py
docs/: writeup.tex
